localstack/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s3-localstack
  namespace: localstack
spec:
  hosts:
    - "s3.vongjon.com"
  gateways:
    - mesh
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: localstack.localstack.svc.cluster.local
            port:
              number: 4566
